# Monarch

./: .gitmodules  CMakeLists.txt  README.md
assets/shaders/: cubeFrag.glsl  cubeVert.glsl  frag.glsl
assets/shaders/2D/: frag.glsl  vert.glsl
ext/: CMakeLists.txt
src/: Application.cpp  CMakeLists.txt  Monarch.cpp  MonarchConfig.hpp.in  TrueTypeFont.cpp
src/components/: Transform.cpp
src/components/2d/: CamController2D.cpp  Sprite.cpp  SpriteAnimator.cpp
src/components/3d/: Camera.cpp  FirstPersonController.cpp
src/components/GUI/: Canvas.cpp  TextRenderable.cpp
src/include/: Application.hpp  ECS.hpp  EntryPoint.hpp  Layer.hpp  Monarch.hpp  TileSheet.hpp  TrueTypeFont.hpp  core.hpp  optional.hpp
src/include/components/: Transform.hpp
src/include/components/2d/: CamController2D.hpp  Sprite.hpp  SpriteAnimator.hpp
src/include/components/3d/: Camera.hpp  FirstPersonController.hpp
src/include/components/gui/: Canvas.hpp  TextRenderable.hpp  UIComponent.hpp
src/include/events/: Event.hpp  Keyboard.hpp  Mouse.hpp  WindowEvent.hpp
